// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvVars tests should have a complete config for all env variables set 1`] = `
Object {
  "additionalResultsProcessors": Array [
    "one",
    "two",
    "three",
  ],
  "coverageLink": "www.walmart.com",
  "disableCharts": false,
  "hideFailing": true,
  "hidePassing": true,
  "jestGlobalConfigJson": undefined,
  "jestStareConfigJson": "true",
  "log": false,
  "report": undefined,
  "reportHeadline": "my title",
  "reportTitle": "my title!",
  "resultDir": "some/dir",
  "resultHtml": "some.html",
  "resultJson": "some.json",
}
`;

exports[`EnvVars tests should have a complete config for all env variables set 2`] = `
Object {
  "additionalResultsProcessors": Array [
    "one",
    "two",
    "three",
  ],
  "coverageLink": "www.walmart.com",
  "disableCharts": false,
  "hideFailing": true,
  "hidePassing": true,
  "jestStareConfigJson": "true",
  "log": false,
  "reportHeadline": "my title",
  "reportTitle": "my title!",
  "resultDir": "some/dir",
  "resultHtml": "some.html",
  "resultJson": "some.json",
}
`;

exports[`EnvVars tests should have an empty config for no env variables set 1`] = `
Object {
  "additionalResultsProcessors": undefined,
  "coverageLink": undefined,
  "disableCharts": undefined,
  "hideFailing": undefined,
  "hidePassing": undefined,
  "jestGlobalConfigJson": undefined,
  "jestStareConfigJson": undefined,
  "log": undefined,
  "report": undefined,
  "reportHeadline": "my report headline",
  "reportTitle": "my report",
  "resultDir": undefined,
  "resultHtml": undefined,
  "resultJson": undefined,
}
`;
